--- a/pains.css
+++ b/pains.css
@@ -1,62 +1,69 @@
 #top {
- font-size: 65px;
- color: rgb(98, 95, 95);
+    font-size: 65px;
+    color: rgb(98, 95, 95);
 }
 
 .nameorg {
- font-size: 30px;
- color: rgb(131, 129, 129);
+    font-size: 30px;
+    color: rgb(131, 129, 129);
 }
 
 .para {
- font-size: 18px;
- width: 1250px;
- margin-left: 40px;
+    font-size: 18px;
+    /* width: 1250px; */
+    margin-left: 40px;
 }
 
 .link {
- margin-left: 30px;
- font-size: 20px;
- text-decoration: none;
- font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
- font-style: italic;
- font-weight: bold;
- /* cursor: pointer; */
+    margin-left: 30px;
+    font-size: 20px;
+    text-decoration: none;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-style: italic;
+    font-weight: bold;
+    /* cursor: pointer; */
 }
 
 a:hover {
- color: palevioletred;
+    color: palevioletred;
 }
 
 .high {
- width: 800px;
+    /* width: 800px; */
+    position: relative;
+    z-index: 2;
 }
 
 .all {
- margin-left: 6%;
- margin-top: 5%;
- margin-bottom: 5%;
-
+    margin-left: 6%;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 #top {
- margin: 2%;
- margin-top: 4%;
- margin-left: 3%;
+    margin: 2%;
+    margin-top: 4%;
+    margin-left: 3%;
 }
 
-.image {
- float: right;
- display: flex;
- margin-top: -1100px;
- margin-left: 200px;
- opacity: 0.2;
- width: 600px;
- height: 700px;
+
+/* body {
+    padding: 0;
+    margin: 0;
+} */
+
+body {
+    background-image: url("./ngo.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center center;
+    background-size: 450px;
+    /* opacity: 0.2; */
 }
 
-@media(max-width: 584px) {
+
+/* @media(max-width: 584px) {
  .high {
   max-width: 100%;
  }
-}
+} */
