--- a/home.css
+++ b/home.css
@@ -1,7 +1,17 @@
+*{
+ margin-left: 0;
+ margin-right:0;
+ padding: 0;
+ /* box-sizing: border-box; */
+}
+.wrapper{
+ width: 100%;
+}
+
 .nav {
  background-color:#54594D;
  overflow: auto;
- width: 100%;
+ /* width: 100%; */
  /* height: 50px; */
 }
 .nav a {
@@ -13,7 +23,7 @@
  text-decoration: none;
  margin-top: -25px;
  font-size: 18px;
- width: 20%;
+ /* width: 20%; */
 }
 a:hover{
  color: palevioletred;
@@ -27,13 +37,13 @@ a:hover{
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
- height: 500px;;
+ height: 600px;
 
 }
 #red1{
  background-color: rgba(218, 33, 33, 0.034);
  color: #fbfeff;
- width: 1200px;
+ /* width: 1200px; */
  position: relative;
  text-align: center;
  font-size: 45px;
@@ -70,7 +80,7 @@ a:hover{
  background-color: rgba(255, 255, 255, 0.465);
 } */
 .img1{
- width: 400px;
+ /* width: 400px; */
  margin-top: 20px;
  margin-bottom: 20px;
  /* margin-right: 100px; */
@@ -78,7 +88,8 @@ a:hover{
 }
 .img2{
  margin-top: 20px;
- margin-left: 200px;
+ margin-left: 150px;
+ width: 200px;
  margin-bottom: 20px;
 }
 #donate{
@@ -121,7 +132,7 @@ height: 150px;
 .icon2{
  /* margin-top: 10px; */
  background-color: rgba(255, 255, 255, 0.315);
- width: 100%;
+ /* width: 100%; */
 }
 
 .all{
@@ -131,7 +142,7 @@ height: 150px;
 .fa {
  padding: 20px;
  font-size: 30px;
- width: 20px;
+ /* width: 20px; */
  text-align: center;
  text-decoration: none;
  border-radius: 50%;
@@ -174,7 +185,7 @@ height: 150px;
  color: white;
 }
 
-.fa-google {
+/* .fa-google {
  background: #dd4b39;
  color: white;
 }
@@ -188,7 +199,7 @@ height: 150px;
 .fa-skype {
  background: #00aff0;
  color: white;
-}
+} */
 
 .fa:hover {
  opacity: 0.9;
